# NN-Interaction

./: .gitignore  CMakeLists.txt  main.cpp
data/: tau_0.txt  tau_1.txt  tau_2.txt  tau_3.txt  tau_4.txt  tau_5.txt  tau_6.txt  tau_7.txt
data_run2_f1/: tau_0.txt  tau_1.txt  tau_2.txt  tau_3.txt  tau_4.txt  tau_5.txt  tau_6.txt  tau_7.txt
docker/: Dockerfile
flavorspace/: diquark-exchange.csv  quark_exchange.csv
include/: Definitions.h  Definitions.hpp
include/amplitudes/: ScalarQuakDiquarkAmplitude.hpp  ScalarQuarkDiquarkAmplitude.hpp
include/data/: QuarkDiquarkAmplitudeReader.hpp
include/gsl-hacks/: GSLFunctionWrapper.hpp
include/helpers/: ExternalImpulseGrid.hpp
include/numerics/: Integratable.hpp  Integration.hpp
include/numerics/integration/: GaussChebyshev.hpp  GaussLegendre.hpp
include/numerics/polynomials/: LegendrePolynomials.hpp
include/operators/: ChargeConjugation.hpp  Projectors.hpp  ProjectorsHelper.hpp
include/propagators/: QuarkPropagator.hpp
include/qcd/amplitudes/: ScalarQuarkDiquarkAmplitude.hpp
include/qcd/propagators/: QuarkPropagator.hpp  ScalarDiquarkPropagator.hpp
include/scattering/: MomentumLoop.hpp  NNInteraction.hpp  ScatteringProcess.hpp  ScatteringProcessHandler.hpp
include/scattering/basis/: TensorBasis.hpp
include/scattering/impulse/: ExternalImpulseGrid.hpp  LoopComplexImpulseGrid.hpp  LoopImpulseGrid.hpp  ZTauGrid.hpp  ZXGrid.hpp
include/scattering/momentumloops/: DeformedQuarkExchangeMomentumLoop.hpp  MomentumLoop.hpp  QuarkExchangeMomentumLoop.hpp
include/scattering/processes/: DiquarkExchange.hpp  QuarkExchange.hpp
include/utils/: Commutator.hpp  DiracStructures.hpp  DiracStructuresHelper.hpp  MatrixInitializers.hpp  ProjectorsHelper.hpp
include/utils/dirac/: DiracStructures.hpp
include/utils/print/: PrintGSLElements.hpp
include/utils/tensor/: Tensor22.hpp  Tensor4.hpp
postprocessing/: FTHandler.py  FTTest.py  LegacyMethods.py  NNPhaseShiftsAndComparison.py  NNPostprocess.py  SchlessingerTest.py  TransferPlots.py  postprocessing.code-workspace
postprocessing/basis/: BasisTauToRho.py  BasisTauToSymAsym.py
postprocessing/data/: AmplitudeHandler.py  Dataloader.py
postprocessing/extrapolation/: SchlessingerPointMethod.py
postprocessing/numerics/: NumericQuadratureFT.py
postprocessing/pwave/: PartialWaveExpansion.py
postprocessing/spectroscopic/: SpectroscopicConversions.py
postprocessing/utils/: fitfunctions.py
postprocessing/visualization/: plotM2.py  plotting.py
src/amplitudes/: ScalarQuakDiquarkAmplitude.cpp  ScalarQuarkDiquarkAmplitude.cpp
src/data/: QuarkDiquarkAmplitudeReader.cpp
src/helpers/: ExternalImpulseGrid.cpp
src/numerics/: Integration.cpp
src/numerics/integration/: GaussChebyshev.cpp  GaussLegendre.cpp
src/numerics/polynomials/: LegendrePolynomials.cpp
src/numerics/roots/: NewtonRootFinder.cpp
src/operators/: ChargeConjugation.cpp  Projectors.cpp  ProjectorsHelper.cpp
src/propagators/: QuarkPropagator.cpp  ScalarDiquarkPropagator.cpp
src/qcd/amplitudes/: ScalarQuarkDiquarkAmplitude.cpp
src/qcd/propagators/: QuarkPropagator.cpp  ScalarDiquarkPropagator.cpp
src/scattering/: MomentumLoop.cpp  NNInteraction.cpp  ScatteringProcess.cpp  ScatteringProcessHandler.cpp
src/scattering/basis/: TensorBasis.cpp
src/scattering/impulse/: ExternalImpulseGrid.cpp  LoopComplexImpulseGrid.cpp  LoopImpulseGrid.cpp  ZTauGrid.cpp  ZXGrid.cpp
src/scattering/momentumloops/: DeformedQuarkExchangeMomentumLoop.cpp  QuarkExchangeMomentumLoop.cpp
src/scattering/processes/: DiquarkExchange.cpp  QuarkExchange.cpp
src/utils/: Commutator.cpp  DiracStructures.cpp  DiracStructuresHelper.cpp  MatrixInitializers.cpp  ProjectorsHelper.cpp  Tensor4.cpp
src/utils/dirac/: DiracStructures.cpp  DiracStructuresHelper.cpp
src/utils/math/: Commutator.cpp
src/utils/print/: PrintGSLElements.cpp
visualization/: plotM2.py
